<resources>
    <string name="app_name">Mobitronics</string>
    <string name="terapia">Terapia</string>
    <string name="historico">Histórico</string>
    <string name="_0001">0001</string>
    <string name="john_doe">John Doe</string>
    <string name="data_de_nascimento">Data de Nascimento: 25/12/1980</string>
    <string name="data_do_ultimo_teste">Data do Último Teste: 25/12/1980</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="novo_paciente">Novo Paciente</string>
    <string name="nova_terapia">Nova Terapia</string>
    <string name="nome">Nome:</string>
    <string name="nome_do_paciente">nome do paciente</string>
    <string name="id_do_paciente">id do paciente</string>
    <string name="id">ID:</string>
    <string name="data_de_nascimento_">Data de Nascimento:</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="genero">Gênero:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="diagnostico_principal">Diagnóstico Principal:</string>
    <string name="observacoes">Observações:</string>
    <string name="pacientes">Pacientes</string>
    <string name="genero_masculino">Gênero: Masculino</string>
    <string name="numero_de_terapias_16">Número de Terapias: 16</string>
    <string name="modo_de_operacao">Modo de Operação:</string>
    <string name="fes">FES</string>
    <string name="fes_passivo">FES + Passivo</string>
    <string name="passivo">Passivo</string>
    <string name="isopower">Isopower:</string>
    <string name="desligado">Desligado</string>
    <string name="ligado">Ligado</string>
    <string name="total">Total</string>
    <string name="fes_">FES:</string>
    <string name="passivo_">Passivo:</string>
    <string name="tempos">Tempos</string>
    <string name="total_">Total:</string>
    <string name="min">min</string>
    <string name="fadiga">Fadiga:</string>
    <string name="desligar_ao_fadiga">Desligar ao Fadiga</string>
    <string name="passivo_ao_fadiga">Passivo ao Fadiga</string>
    <string name="velocidade">Velocidade:</string>
    <string name="rpm">RPM</string>
    <string name="intensidade_limite">Intensidade Limite:</string>
    <string name="unidade">[unidade?]</string>
    <string name="tempo_de_recuperacao">Tempo de Recuperação:</string>
    <string name="constante">Constante</string>
    <string name="variavel">Variável</string>
    <string name="carga">Carga:</string>
    <string name="W">W</string>
    <string name="configurar_canais">Configurar Canais</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="canal_1a">Canal 1A</string>
    <string name="canal_1b">Canal 1B</string>
    <string name="canal_2a">Canal 2A</string>
    <string name="canal_2b">Canal 2B</string>
    <string name="canal_3a">Canal 3A</string>
    <string name="canal_3b">Canal 3B</string>
    <string name="canal_4a">Canal 4A</string>
    <string name="canal_4b">Canal 4B</string>
    <string name="start_test">Start Test</string>
    <string name="intensity">Intensidade:</string>
    <string name="frequency">Frequência:</string>
    <string name="largura_de_pulso">Largura de Pulso:</string>
    <string name="hz">Hz</string>
    <string name="tempo_total">Tempo Total:</string>
    <string name="_00_00">00:00</string>
    <string name="execucao_de_exame">Execução de Exame</string>
    <string name="tipo">Tipo:</string>
    <string name="carga_constante">Carga Constante</string>
    <string name="torque_constante">Torque Constante</string>
    <string name="execucao_de_terapia">Execução de Terapia</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
