<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.vcc.vicente.mobitronics.ChannelSettings_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupOverlay"
            app:title="Configurar Canais"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_1a" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_1b" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_2a" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_2b" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_3a" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_3b" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_4a" />

            <android.support.design.widget.TabItem
                android:id="@+id/channelTab4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal_4b" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
