<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vcc.vicente.mobitronics.TherapySettings_Activity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Configurar Terapia"/>

    <TextView
        android:id="@+id/operationMode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_de_operacao"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        android:layout_marginLeft="@dimen/therapy_margin"
        android:layout_marginStart="@dimen/therapy_margin"
        android:layout_marginTop="@dimen/therapy_margin"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/operationMode_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/operationMode_tv"
        app:layout_constraintLeft_toLeftOf="@id/operationMode_tv"
        android:textColor="@color/colorPrimaryDark">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fes"
            android:textSize="@dimen/therapy_textSize"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fes_passivo"
            android:textSize="@dimen/therapy_textSize"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passivo"
            android:textSize="@dimen/therapy_textSize"/>
    </RadioGroup>

    <TextView
        android:id="@+id/isopower_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isopower"
        app:layout_constraintTop_toBottomOf="@id/operationMode_rg"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintLeft_toLeftOf="@id/operationMode_tv"
        android:layout_marginTop="@dimen/therapy_margin"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/isopwer_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/isopower_tv"
        app:layout_constraintLeft_toLeftOf="@id/operationMode_tv"
        android:textColor="@color/colorPrimaryDark">
        <RadioButton
            android:id="@+id/isopowerOn_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ligado"
            android:textSize="@dimen/therapy_textSize"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/isopowerOff_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desligado"
            android:textSize="@dimen/therapy_textSize"/>
    </RadioGroup>

    <TextView
        android:id="@+id/load_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        app:layout_constraintTop_toBottomOf="@id/isopwer_rg"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintLeft_toLeftOf="@id/operationMode_tv"
        android:layout_marginTop="@dimen/therapy_margin"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/loadType_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/load_tv"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintLeft_toLeftOf="@id/operationMode_tv"
        android:textColor="@color/colorPrimaryDark">
        <RadioButton
            android:id="@+id/constantLoad_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carga_constante"
            android:textSize="@dimen/therapy_textSize"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/constantTorque_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/torque_constante"
            android:textSize="@dimen/therapy_textSize"/>
    </RadioGroup>

    <TextView
        android:id="@+id/times_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempos"
        app:layout_constraintLeft_toRightOf="@id/operationMode_tv"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintTop_toTopOf="@id/operationMode_tv"
        android:layout_marginLeft="@dimen/therapy_big_margin"
        android:layout_marginStart="@dimen/therapy_big_margin"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/fes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fes_"
        app:layout_constraintTop_toBottomOf="@id/times_tv"
        app:layout_constraintLeft_toLeftOf="@id/times_tv"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/fesUnit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintLeft_toRightOf="@id/fesTime_et"
        app:layout_constraintBaseline_toBaselineOf="@id/fesTime_et"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/passive_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passivo_"
        app:layout_constraintTop_toBottomOf="@id/fes_tv"
        app:layout_constraintLeft_toLeftOf="@id/times_tv"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/passiveTime_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/passive_tv"
        app:layout_constraintBaseline_toBaselineOf="@id/passive_tv"
        android:inputType="number"
        android:ems="2"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/passiveUnit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintLeft_toRightOf="@id/passiveTime_et"
        app:layout_constraintBaseline_toBaselineOf="@id/passiveTime_et"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_"
        app:layout_constraintTop_toBottomOf="@id/passive_tv"
        app:layout_constraintLeft_toLeftOf="@id/times_tv"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/totalUnit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintLeft_toRightOf="@id/totalTime_et"
        app:layout_constraintBaseline_toBaselineOf="@id/totalTime_et"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/fesTime_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/passiveTime_et"
        app:layout_constraintBaseline_toBaselineOf="@id/fes_tv"
        android:inputType="number"
        android:ems="2"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/totalTime_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/total_tv"
        app:layout_constraintLeft_toLeftOf="@id/passiveTime_et"
        android:inputType="number"
        android:ems="2"
        android:enabled="false"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/fadiga_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fadiga"
        app:layout_constraintLeft_toRightOf="@id/fesUnit_tv"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintBaseline_toBaselineOf="@id/times_tv"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="@dimen/therapy_big_margin"
        android:layout_marginStart="@dimen/therapy_big_margin"/>

    <RadioGroup
        android:id="@+id/fadiga_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fadiga_tv"
        android:textSize="@dimen/therapy_textSize"
        app:layout_constraintLeft_toLeftOf="@id/fadiga_tv"
        android:textColor="@color/colorPrimaryDark">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desligar_ao_fadiga"
            android:textSize="@dimen/therapy_textSize"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passivo_ao_fadiga"
            android:textSize="@dimen/therapy_textSize"/>
    </RadioGroup>

    <TextView
        android:id="@+id/speed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velocidade"
        app:layout_constraintTop_toBottomOf="@id/total_tv"
        app:layout_constraintLeft_toLeftOf="@id/times_tv"
        android:textSize="@dimen/therapy_textSize"
        android:layout_marginTop="@dimen/therapy_margin"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/limitIntensity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intensidade_limite"
        app:layout_constraintTop_toBottomOf="@id/speed_tv"
        app:layout_constraintLeft_toLeftOf="@id/times_tv"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/recoveryTime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo_de_recuperacao"
        app:layout_constraintTop_toBottomOf="@id/limitIntensity_tv"
        app:layout_constraintLeft_toLeftOf="@id/times_tv"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/recoveryTime_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/recoveryTime_tv"
        app:layout_constraintBaseline_toBaselineOf="@id/recoveryTime_tv"
        android:inputType="number"
        android:ems="2"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/recoveryTimeUnit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintLeft_toRightOf="@id/recoveryTime_et"
        app:layout_constraintBaseline_toBaselineOf="@id/recoveryTime_et"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/limitIntensity_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/limitIntensity_tv"
        app:layout_constraintBaseline_toBaselineOf="@id/limitIntensity_tv"
        app:layout_constraintLeft_toLeftOf="@id/recoveryTime_et"
        android:inputType="number"
        android:ems="2"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/limitIntensityUnit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unidade"
        app:layout_constraintLeft_toRightOf="@id/limitIntensity_et"
        app:layout_constraintBaseline_toBaselineOf="@id/limitIntensity_et"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/speed_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/speed_tv"
        app:layout_constraintBaseline_toBaselineOf="@id/speed_tv"
        app:layout_constraintLeft_toLeftOf="@id/recoveryTime_et"
        android:inputType="number"
        android:ems="2"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/speedUnit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rpm"
        app:layout_constraintLeft_toRightOf="@id/speed_et"
        app:layout_constraintBaseline_toBaselineOf="@id/speed_et"
        android:textSize="@dimen/therapy_textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <com.vcc.vicente.mobitronics.IsopowerPointView
        android:id="@+id/point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/recoveryTime_tv"
        app:layout_constraintTop_toBottomOf="@id/recoveryTime_tv"
        android:layout_marginTop="@dimen/therapy_margin"
        app:title="P1"/>

    <com.vcc.vicente.mobitronics.IsopowerPointView
        android:id="@+id/point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/point1"
        app:layout_constraintTop_toBottomOf="@id/point1"
        app:title="P2"/>

    <com.vcc.vicente.mobitronics.IsopowerPointView
        android:id="@+id/point3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/point2"
        app:layout_constraintTop_toBottomOf="@id/point2"
        app:title="P3"/>

    <com.vcc.vicente.mobitronics.IsopowerPointView
        android:id="@+id/point4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/point3"
        app:layout_constraintTop_toBottomOf="@id/point3"
        app:title="P4"/>

</android.support.constraint.ConstraintLayout>

</ScrollView>
